--- a/index.html
+++ b/index.html
@@ -3,106 +3,55 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AgriNexus World | 운영형 SPA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>계약서 생성기</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    html { scroll-behavior: smooth; }
-    .section { display: none; }
-    .section.active { display: block; }
-  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </head>
-<body class="bg-gray-50 text-gray-900 font-sans">
+<body class="bg-gray-50 text-gray-900 font-sans p-6">
+  <div class="max-w-xl mx-auto">
+    <h1 class="text-2xl font-bold mb-4">📄 계약서 자동 생성기</h1>
+    <label class="block mb-2">계약자 이름</label>
+    <input id="name" type="text" placeholder="예: 홍길동" class="border p-2 w-full rounded mb-4"/>
 
-  <header class="bg-green-700 text-white py-6 text-center">
-    <h1 class="text-3xl font-bold">AgriNexus World</h1>
-    <p class="text-sm mt-1">스마트팜 통합 자동화 시스템 - 실사용 가능한 운영형 SPA</p>
-    <nav class="mt-4 flex justify-center flex-wrap gap-2">
-      <button onclick="showSection('contract')" class="bg-white text-green-800 px-4 py-2 rounded hover:bg-gray-100">계약</button>
-      <button onclick="showSection('design')" class="bg-white text-green-800 px-4 py-2 rounded hover:bg-gray-100">설계</button>
-      <button onclick="showSection('logistics')" class="bg-white text-green-800 px-4 py-2 rounded hover:bg-gray-100">물류</button>
-      <button onclick="showSection('report')" class="bg-white text-green-800 px-4 py-2 rounded hover:bg-gray-100">리포트</button>
-      <button onclick="showSection('investment')" class="bg-white text-green-800 px-4 py-2 rounded hover:bg-gray-100">투자</button>
-      <button onclick="showSection('global')" class="bg-white text-green-800 px-4 py-2 rounded hover:bg-gray-100">글로벌</button>
-    </nav>
-  </header>
+    <label class="block mb-2">계약 내용</label>
+    <textarea id="content" rows="5" placeholder="계약 내용을 입력하세요" class="border p-2 w-full rounded mb-4"></textarea>
 
-  <main class="max-w-5xl mx-auto py-10 px-4">
-    <section id="contract" class="section active">
-      <h2 class="text-xl font-bold mb-2">📄 계약 생성기</h2>
-      <input id="name" type="text" placeholder="계약자명" class="border p-2 rounded w-full max-w-md"/>
-      <button onclick="createContract()" class="mt-2 bg-green-600 text-white px-4 py-2 rounded">계약서 생성</button>
-      <p id="contractResult" class="mt-4 text-green-800 font-medium"></p>
-    </section>
+    <button onclick="generatePDF()" class="bg-green-600 text-white px-6 py-2 rounded hover:bg-green-700">📄 PDF 생성</button>
 
-    <section id="design" class="section">
-      <h2 class="text-xl font-bold mb-2">🤖 AI 설계</h2>
-      <input id="area" type="text" placeholder="예: 강원도 원주시" class="border p-2 rounded w-full max-w-md"/>
-      <button onclick="generateDesign()" class="mt-2 bg-purple-600 text-white px-4 py-2 rounded">설계 생성</button>
-      <p id="designResult" class="mt-4 text-purple-800 font-medium"></p>
-    </section>
-
-    <section id="logistics" class="section">
-      <h2 class="text-xl font-bold mb-2">🛰 물류 추적</h2>
-      <input id="city" type="text" placeholder="출발지 입력" class="border p-2 rounded w-full max-w-md"/>
-      <button onclick="trackLogistics()" class="mt-2 bg-blue-600 text-white px-4 py-2 rounded">추적 시작</button>
-      <p id="logisticsResult" class="mt-4 text-blue-800 font-medium"></p>
-    </section>
-
-    <section id="report" class="section">
-      <h2 class="text-xl font-bold mb-2">📊 ROI 리포트</h2>
-      <input id="investmentAmount" type="number" placeholder="투자금액(만원)" class="border p-2 rounded w-full max-w-md"/>
-      <button onclick="generateReport()" class="mt-2 bg-pink-600 text-white px-4 py-2 rounded">리포트 생성</button>
-      <p id="reportResult" class="mt-4 text-pink-800 font-medium"></p>
-    </section>
-
-    <section id="investment" class="section">
-      <h2 class="text-xl font-bold mb-2">💰 투자 IR 생성</h2>
-      <input id="irTitle" type="text" placeholder="IR 문서 제목" class="border p-2 rounded w-full max-w-md"/>
-      <button onclick="createIR()" class="mt-2 bg-orange-600 text-white px-4 py-2 rounded">IR 생성</button>
-      <p id="investmentResult" class="mt-4 text-orange-800 font-medium"></p>
-    </section>
-
-    <section id="global" class="section">
-      <h2 class="text-xl font-bold mb-2">🌐 글로벌 확장</h2>
-      <p class="text-gray-700 mb-2">PWA 앱 설치, GPT 챗봇 연동, 다국어 자동 번역 기능 구성 예정</p>
-      <button class="bg-teal-600 text-white px-4 py-2 rounded">GPT 상담 시작</button>
-    </section>
-  </main>
-
-  <footer class="text-center text-sm text-gray-600 py-6">
-    © 2025 AgriNexus World — 완전 작동 SPA 시스템
-  </footer>
+    <div id="preview" class="mt-10 p-6 bg-white border rounded shadow hidden">
+      <h2 class="text-xl font-bold mb-2">[ 계약서 ]</h2>
+      <p><strong>계약자명:</strong> <span id="previewName"></span></p>
+      <p class="mt-4 whitespace-pre-wrap" id="previewContent"></p>
+      <p class="mt-6 text-sm text-gray-500">* 본 계약서는 AgriNexus World에서 자동 생성되었습니다.</p>
+    </div>
+  </div>
 
   <script>
-    function showSection(id) {
-      document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
-    }
+    function generatePDF() {
+      const name = document.getElementById("name").value.trim();
+      const content = document.getElementById("content").value.trim();
 
-    function createContract() {
-      const name = document.getElementById('name').value;
-      document.getElementById('contractResult').innerText = `✅ ${name}님의 계약서가 생성되었습니다 (PDF 준비됨)`;
-    }
+      if (!name || !content) {
+        alert("계약자 이름과 내용을 모두 입력해 주세요.");
+        return;
+      }
 
-    function generateDesign() {
-      const area = document.getElementById('area').value;
-      document.getElementById('designResult').innerText = `🌱 ${area}에 적합한 설계안이 생성되었습니다.`;
-    }
+      document.getElementById("previewName").innerText = name;
+      document.getElementById("previewContent").innerText = content;
+      const preview = document.getElementById("preview");
+      preview.classList.remove("hidden");
 
-    function trackLogistics() {
-      const city = document.getElementById('city').value;
-      document.getElementById('logisticsResult').innerText = `🚚 ${city}에서 출발한 물류를 실시간 추적 중입니다.`;
-    }
-
-    function generateReport() {
-      const amount = document.getElementById('investmentAmount').value;
-      document.getElementById('reportResult').innerText = `📈 예상 ROI는 약 ${amount * 1.5}만원입니다.`;
-    }
-
-    function createIR() {
-      const title = document.getElementById('irTitle').value;
-      document.getElementById('investmentResult').innerText = `📄 IR 문서 "${title}"가 생성되었습니다.`;
+      html2pdf()
+        .set({
+          margin: 0.5,
+          filename: `계약서_${name}.pdf`,
+          image: { type: 'jpeg', quality: 0.98 },
+          html2canvas: { scale: 2 },
+          jsPDF: { unit: 'in', format: 'a4', orientation: 'portrait' }
+        })
+        .from(preview)
+        .save();
     }
   </script>
 </body>
