--- a/index.html
+++ b/index.html
@@ -2,97 +2,44 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>AgriNexus World | GPT 완전 통합 플랫폼</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    html { scroll-behavior: smooth; }
-    .tab { display: none; }
-    .tab.active { display: block; }
-    .chat-box { height: 200px; overflow-y: auto; background: #f4f4f4; padding: 1rem; margin-bottom: 1rem; border-radius: 0.5rem; }
-  </style>
+    <meta charset="UTF-8">
+    <title>AgriNexus World - 세계최강 AI 스마트팜 플랫폼</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body { font-family: 'Segoe UI', sans-serif; padding: 20px; background: #f4f4f4; color: #222; }
+        h1 { color: #2e8b57; }
+        textarea { width: 100%; height: 100px; margin-top: 10px; }
+        button { padding: 10px 20px; margin-top: 10px; background-color: #2e8b57; color: white; border: none; cursor: pointer; }
+        #gpt-output { margin-top: 20px; background: #fff; padding: 10px; border: 1px solid #ccc; }
+    </style>
 </head>
-<body class="bg-white text-gray-900 font-sans">
-  <header class="bg-green-700 text-white text-center py-6">
-    <h1 class="text-3xl font-bold">AgriNexus World</h1>
-    <p class="text-sm">GPT 완전 통합 | 계약, 설계, 리포트 기능에 AI 보조 포함</p>
-  </header>
+<body>
+    <h1>🌍 AgriNexus World GPT 초지능 자동화 플랫폼</h1>
+    <p>아래에 질문을 입력하면 GPT가 AI 자동 응답을 제공합니다:</p>
+    <textarea id="gpt-input" placeholder="예: 최적 스마트팜 설계 제안서 만들어줘"></textarea>
+    <button onclick="askGPT()">GPT 실행</button>
+    <div id="gpt-output"></div>
 
-  <main class="max-w-5xl mx-auto p-6 text-sm">
-    <nav class="flex justify-center gap-2 mb-6 flex-wrap">
-      <button onclick="showTab('contract')" class="bg-green-100 px-4 py-2 rounded">📄 계약</button>
-      <button onclick="showTab('design')" class="bg-purple-100 px-4 py-2 rounded">🤖 설계</button>
-      <button onclick="showTab('report')" class="bg-pink-100 px-4 py-2 rounded">📊 리포트</button>
-    </nav>
-
-    <!-- 계약 탭 -->
-    <section id="contract" class="tab active">
-      <h2 class="text-xl font-bold mb-2">📄 계약 생성</h2>
-      <input id="cName" placeholder="계약자 이름" class="border p-2 rounded w-full mb-2" />
-      <textarea id="cText" placeholder="계약 내용 입력" class="border p-2 rounded w-full mb-2" rows="4"></textarea>
-      <div class="chat-box" id="chatContract"></div>
-      <div class="flex gap-2 mb-4">
-        <input id="cPrompt" placeholder="GPT에게 계약 문장 질문하기" class="border p-2 rounded w-full" />
-        <button onclick="chat('cPrompt', 'chatContract')" class="bg-green-600 text-white px-4 py-2 rounded">GPT 질문</button>
-      </div>
-    </section>
-
-    <!-- 설계 탭 -->
-    <section id="design" class="tab">
-      <h2 class="text-xl font-bold mb-2">🤖 설계 시뮬레이션</h2>
-      <input id="dArea" placeholder="설계 지역" class="border p-2 rounded w-full mb-2" />
-      <select id="dType" class="border p-2 rounded w-full mb-2">
-        <option>복합형 온실</option>
-        <option>수경재배 시스템</option>
-        <option>태양광 연계형</option>
-      </select>
-      <div class="chat-box" id="chatDesign"></div>
-      <div class="flex gap-2 mb-4">
-        <input id="dPrompt" placeholder="GPT에게 설계 질문하기" class="border p-2 rounded w-full" />
-        <button onclick="chat('dPrompt', 'chatDesign')" class="bg-purple-600 text-white px-4 py-2 rounded">GPT 질문</button>
-      </div>
-    </section>
-
-    <!-- 리포트 탭 -->
-    <section id="report" class="tab">
-      <h2 class="text-xl font-bold mb-2">📊 ROI 리포트</h2>
-      <input id="rAmount" placeholder="투자금 입력(만원)" class="border p-2 rounded w-full mb-2" />
-      <div class="chat-box" id="chatReport"></div>
-      <div class="flex gap-2 mb-4">
-        <input id="rPrompt" placeholder="GPT에게 수익성 질문하기" class="border p-2 rounded w-full" />
-        <button onclick="chat('rPrompt', 'chatReport')" class="bg-pink-600 text-white px-4 py-2 rounded">GPT 질문</button>
-      </div>
-    </section>
-  </main>
-
-  <footer class="bg-gray-100 text-center text-sm text-gray-600 py-6 mt-6">
-    © 2025 AgriNexus World — GPT 전자동화 통합 플랫폼
-  </footer>
-
-<script>
-  function showTab(id) {
-    document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-  }
-
-  function chat(inputId, outputId) {
-    const input = document.getElementById(inputId);
-    const box = document.getElementById(outputId);
-    const text = input.value.trim();
-    if (!text) return;
-
-    const userMsg = document.createElement("div");
-    userMsg.innerHTML = "<strong>사용자:</strong> " + text;
-    box.appendChild(userMsg);
-
-    const botMsg = document.createElement("div");
-    botMsg.innerHTML = "<strong>GPT:</strong> " + "해당 항목에 대해 조항을 다음과 같이 작성할 수 있습니다...";
-    setTimeout(() => box.appendChild(botMsg), 600);
-
-    input.value = "";
-    box.scrollTop = box.scrollHeight;
-  }
-</script>
+    <script>
+    async function askGPT() {
+        const input = document.getElementById("gpt-input").value;
+        const output = document.getElementById("gpt-output");
+        output.innerHTML = "GPT 응답 생성 중...";
+        const response = await fetch("https://api.openai.com/v1/chat/completions", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "Authorization": "Bearer YOUR_API_KEY"
+            },
+            body: JSON.stringify({
+                model: "gpt-4o",
+                messages: [{ role: "user", content: input }],
+                temperature: 0.7
+            })
+        });
+        const data = await response.json();
+        output.innerHTML = data.choices?.[0]?.message?.content || "응답 오류 발생";
+    }
+    </script>
 </body>
 </html>
