--- a/index.html
+++ b/index.html
@@ -1,45 +1,19 @@
 
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>AgriNexus World - 세계최강 AI 스마트팜 플랫폼</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body { font-family: 'Segoe UI', sans-serif; padding: 20px; background: #f4f4f4; color: #222; }
-        h1 { color: #2e8b57; }
-        textarea { width: 100%; height: 100px; margin-top: 10px; }
-        button { padding: 10px 20px; margin-top: 10px; background-color: #2e8b57; color: white; border: none; cursor: pointer; }
-        #gpt-output { margin-top: 20px; background: #fff; padding: 10px; border: 1px solid #ccc; }
-    </style>
-</head>
-<body>
-    <h1>🌍 AgriNexus World GPT 초지능 자동화 플랫폼</h1>
-    <p>아래에 질문을 입력하면 GPT가 AI 자동 응답을 제공합니다:</p>
-    <textarea id="gpt-input" placeholder="예: 최적 스마트팜 설계 제안서 만들어줘"></textarea>
-    <button onclick="askGPT()">GPT 실행</button>
-    <div id="gpt-output"></div>
-
-    <script>
-    async function askGPT() {
-        const input = document.getElementById("gpt-input").value;
-        const output = document.getElementById("gpt-output");
-        output.innerHTML = "GPT 응답 생성 중...";
-        const response = await fetch("https://api.openai.com/v1/chat/completions", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-                "Authorization": "Bearer YOUR_API_KEY"
-            },
-            body: JSON.stringify({
-                model: "gpt-4o",
-                messages: [{ role: "user", content: input }],
-                temperature: 0.7
-            })
-        });
-        const data = await response.json();
-        output.innerHTML = data.choices?.[0]?.message?.content || "응답 오류 발생";
-    }
-    </script>
-</body>
-</html>
+    <!DOCTYPE html>
+    <html lang="ko">
+    <head>
+        <meta charset="UTF-8">
+        <title>AgriNexus World - 홈</title>
+    </head>
+    <body>
+        <h1>🌱 AgriNexus World</h1>
+        <ul>
+            <li><a href="admin.html">관리자 대시보드</a></li>
+            <li><a href="contract.html">계약 생성</a></li>
+            <li><a href="proposal.html">제안서 작성</a></li>
+            <li><a href="report.html">보고서 생성</a></li>
+            <li><a href="ai.html">AI 오퍼레이터</a></li>
+        </ul>
+    </body>
+    </html>
+    
